Criando paginas e icones
fizemos uma lista ordenadas e não ordenadas e icones com ancora

--- a/pag1.html
+++ b/pag1.html
@@ -4,20 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f35b5640ea.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="pag1.css">
     <link rel="shortcut icon" href="imagens/fashion.png" type="image/x-icon">
     <title>NK Fashion</title>
 </head>
 <body>
+    <header>
     <img src="imagens/nk.png" alt="" width="10%">
+    <ul>
+        <li>
+            <a href="pag1.html">
+                <i class="fa-solid fa-house"></i> Home</a>
+            </li>
+            <li>
+                <a href="pag2.html">
+                    <i class="fa-solid fa-shirt"></i> Produtos</a>
+            </li>
+            <li>
+                <a href=""> 
+                    <i class="fa-solid fa-circle-exclamation"></i>
+                    Sobre</a>
+            </li>
+            <li>
+                <a href="">Fale Conosco <i class="fa-regular fa-comment"></i></a>
+            </li>
+    </ul>
+</header>
     <hr>
     <h2> Sobretudo Masculino</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio illum, numquam sequi saepe rem doloremque nam eum perferendis quibusdam ab aspernatur ex reprehenderit nobis ipsam enim quos quisquam repudiandae deleniti.</p>
     <a href="pag2.html">
     <img src="imagens/images.jpg" alt="homem com estilo de roupa preta">
     </a>
-    <br>
     <p>R$ 500</p>
-    <p>Frete Gratis</p>
+    <p style="color: rgb(6, 110, 6)"> Frete Gratis </p>
     <a href="pag2.html">
     <button> Clique aqui</button>
     </a>
@@ -28,7 +48,7 @@
     <img src="imagens/download.jpg" alt="homem vestido com uma camisa social branca de oculos escuro marrom">
     </a>
      <p>R$ 250</p>
-    <p>Frete Gratis</p>
+    <p style="color:  rgb(6, 110, 6)">Frete Gratis</p>
     <br>
     <a href="pag2.html">
     <button> Clique aqui</button>
@@ -40,7 +60,7 @@
     <img src="imagens/terno-GF33355001-f1.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="20%">
     </a>
      <p>R$ 1.700</p>
-    <p>Frete Gratis</p>
+    <p style="color: rgb(6, 110, 6)">Frete Gratis</p>
     <br>
     <a href="pag2.html">
     <button> Clique aqui</button>
@@ -52,7 +72,7 @@
     <img src="imagens/golf.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="20%">
     </a>
      <p>R$ 1.000</p>
-    <p>Frete Gratis</p>
+    <p style="color: rgb(6, 110, 6)">Frete Gratis</p>
     <br>
     <a href="pag2.html">
     <button> Clique aqui</button>
