--- a/pag2.html
+++ b/pag2.html
@@ -3,10 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/f35b5640ea.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="pag2.css">
     <title>Sobretudo masculino</title>
 </head>
-<body><a href="pag1.html">
-    <img src="imagens/nk.png" alt="marca NK Fashion" height="610px" width="1000px">
-    </a>
+<body>
+    <header>
+        <img src="imagens/nk.png" alt="" width="10%">
+        <ul>
+            <li>
+                <a href="pag1.html">
+                    <i class="fa-solid fa-house"></i> Home</a>
+                </li>
+                <li>
+                    <a href="pag2.html">
+                        <i class="fa-solid fa-shirt"></i> Produtos</a>
+                </li>
+                <li>
+                    <a href=""> 
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        Sobre</a>
+                </li>
+                <li>
+                    <a href="">Fale Conosco <i class="fa-regular fa-comment"></i></a>
+                </li>
+        </ul>
+    </header>
 </body>
 </html>
