pratica de tabela
praticando tabelas

--- a/pag1.html
+++ b/pag1.html
@@ -30,6 +30,7 @@
             </li>
     </ul>
 </header>
+<div class="main">
     <hr>
     <h2> Sobretudo Masculino</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio illum, numquam sequi saepe rem doloremque nam eum perferendis quibusdam ab aspernatur ex reprehenderit nobis ipsam enim quos quisquam repudiandae deleniti.</p>
@@ -37,7 +38,7 @@
     <img src="imagens/images.jpg" alt="homem com estilo de roupa preta">
     </a>
     <p>R$ 500</p>
-    <p style="color: rgb(6, 110, 6)"> Frete Gratis </p>
+    <p style="color: rgb(2, 255, 2)"> Frete Gratis </p>
     <a href="pag2.html">
     <button> Clique aqui</button>
     </a>
@@ -48,7 +49,7 @@
     <img src="imagens/download.jpg" alt="homem vestido com uma camisa social branca de oculos escuro marrom">
     </a>
      <p>R$ 250</p>
-    <p style="color:  rgb(6, 110, 6)">Frete Gratis</p>
+    <p style="color:  rgb(0, 255, 0)">Frete Gratis</p>
     <br>
     <a href="pag2.html">
     <button> Clique aqui</button>
@@ -60,7 +61,7 @@
     <img src="imagens/terno-GF33355001-f1.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="20%">
     </a>
      <p>R$ 1.700</p>
-    <p style="color: rgb(6, 110, 6)">Frete Gratis</p>
+    <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
     <br>
     <a href="pag2.html">
     <button> Clique aqui</button>
@@ -72,10 +73,11 @@
     <img src="imagens/golf.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="20%">
     </a>
      <p>R$ 1.000</p>
-    <p style="color: rgb(6, 110, 6)">Frete Gratis</p>
+    <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
     <br>
     <a href="pag2.html">
     <button> Clique aqui</button>
     </a>
+</div>
 </body>
 </html>
