--- a/pag2.html
+++ b/pag2.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/fashion.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/f35b5640ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="pag2.css">
-    <title>Sobretudo masculino</title>
+    <title>Nk Fashion</title>
 </head>
 <body>
     <header>
@@ -29,5 +30,44 @@
                 </li>
         </ul>
     </header>
+    <hr>
+    <!--  th = titulo dentro de uma tabela -->
+    <table border="4" width="30%" style="color: white;">
+        <tr>
+            <th>Primeiro Nome</th>
+            <th>Sobrenome</th>
+            <th>Idade</th>
+        </tr>
+        <!-- td = conteudo texto padrão -->
+        <tr>
+            <td>juliana</td>
+            <td>Cerqueira</td>
+            <td>20 Anos</td>
+        </tr>
+
+        <tr>
+            <td>Jaqueline</td>
+            <td>Abreu</td>
+            <td>25 Anos</td>
+        </tr>
+
+        <tr>
+            <td>Jessica</td>
+            <td>Silva</td>
+            <td>37 Anos</td>
+        </tr>
+        
+        <tr>
+            <td>Gabriel</td>
+            <td>Luis</td>
+            <td>19 Anos</td>
+        </tr>
+
+        <tr>
+            <td>Daniel</td>
+            <td>Rodrigues</td>
+            <td>30 Anos</td>
+        </tr>
+    </table>
 </body>
 </html>
