--- a/pag1.html
+++ b/pag1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,76 +9,107 @@
     <link rel="shortcut icon" href="imagens/fashion.png" type="image/x-icon">
     <title>NK Fashion</title>
 </head>
+
 <body>
     <header>
-    <img src="imagens/nk.png" alt="" width="10%">
-    <ul>
-        <li>
-            <a href="pag1.html">
-                <i class="fa-solid fa-house"></i> Home</a>
+        <img src="imagens/nk.png" alt="navegador da pagina" width="10%">
+        <ul>
+            <li>
+                <a href="pag1.html">
+                    <i class="fa-solid fa-house"></i> Home</a>
             </li>
             <li>
                 <a href="pag2.html">
                     <i class="fa-solid fa-shirt"></i> Produtos</a>
             </li>
             <li>
-                <a href=""> 
+                <a href="">
                     <i class="fa-solid fa-circle-exclamation"></i>
                     Sobre</a>
             </li>
             <li>
                 <a href="">Fale Conosco <i class="fa-regular fa-comment"></i></a>
             </li>
-    </ul>
-</header>
-<div class="main">
-    <hr>
-    <h2> Sobretudo Masculino</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio illum, numquam sequi saepe rem doloremque nam eum perferendis quibusdam ab aspernatur ex reprehenderit nobis ipsam enim quos quisquam repudiandae deleniti.</p>
-    <a href="pag2.html">
-    <img src="imagens/images.jpg" alt="homem com estilo de roupa preta">
-    </a>
-    <p>R$ 500</p>
-    <p style="color: rgb(2, 255, 2)"> Frete Gratis </p>
-    <a href="pag2.html">
-    <button> Clique aqui</button>
-    </a>
-    <hr>
-    <h2>Elegancia</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam nemo dignissimos perferendis ullam velit. In nulla soluta aliquam sequi autem veniam totam ab. Aut animi voluptatibus eveniet, magnam praesentium excepturi!</p>
-    <a href="pag2.html">
-    <img src="imagens/download.jpg" alt="homem vestido com uma camisa social branca de oculos escuro marrom">
-    </a>
-     <p>R$ 250</p>
-    <p style="color:  rgb(0, 255, 0)">Frete Gratis</p>
-    <br>
-    <a href="pag2.html">
-    <button> Clique aqui</button>
-    </a>
-    <hr>
-    <h2>Ternos</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam nemo dignissimos perferendis ullam velit. In nulla soluta aliquam sequi autem veniam totam ab. Aut animi voluptatibus eveniet, magnam praesentium excepturi!</p>
-    <a href="pag2.html">
-    <img src="imagens/terno-GF33355001-f1.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="20%">
-    </a>
-     <p>R$ 1.700</p>
-    <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
-    <br>
-    <a href="pag2.html">
-    <button> Clique aqui</button>
-    </a>
-    <hr>
-    <h2>Roupa De Golfe</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam nemo dignissimos perferendis ullam velit. In nulla soluta aliquam sequi autem veniam totam ab. Aut animi voluptatibus eveniet, magnam praesentium excepturi!</p>
-    <a href="pag2.html">
-    <img src="imagens/golf.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="20%">
-    </a>
-     <p>R$ 1.000</p>
-    <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
-    <br>
-    <a href="pag2.html">
-    <button> Clique aqui</button>
-    </a>
-</div>
+        </ul>
+    </header>
+
+    <div class="main">
+        <hr>
+        <h2> Sobretudo Masculino</h2>
+        <div class="card-descricao">
+            <a href="pag2.html">
+                <img src="imagens/images.jpg" alt="homem com estilo de roupa preta">
+            </a>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
+                doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
+                quisquam
+                repudiandae deleniti.</p>
+
+        </div>
+
+        <p>R$ 500</p>
+        <p style="color: rgb(2, 255, 2)"> Frete Gratis </p>
+        <a href="pag2.html">
+            <button> Clique aqui</button>
+        </a>
+        <hr>
+        <h2>Elegancia</h2>
+        <div class="card-descricao">
+            <a href="pag2.html">
+                <img src="imagens/download.jpg"
+                    alt="homem vestido com uma camisa social branca de oculos escuro marrom">
+            </a>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
+                doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
+                quisquam
+                repudiandae deleniti.</p>
+
+        </div>
+        <p>R$ 250</p>
+        <p style="color:  rgb(0, 255, 0)">Frete Gratis</p>
+        <br>
+        <a href="pag2.html">
+            <button> Clique aqui</button>
+        </a>
+        <hr>
+        <h2>Ternos</h2>
+        <div class="card-descricao">
+        <a href="pag2.html">
+            <img src="imagens/terno-GF33355001-f1.jpg" alt="homem vestido com uma camisa social branca de oculos escuro marrom" width="250px">
+        </a>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
+            doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
+            quisquam
+            repudiandae deleniti.</p>
+        </a>
+    </div>
+
+        <p>R$ 1.700</p>
+        <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
+        <br>
+        <a href="pag2.html">
+            <button> Clique aqui</button>
+        </a>
+        <hr>
+        <h2>Roupa De Golfe</h2>
+        <div class="card-descricao">
+            <a href="pag2.html">
+                <img src="imagens/golf.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="250px">
+            </a>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
+                doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
+                quisquam
+                repudiandae deleniti.</p>
+        </div>
+
+        <p>R$ 1.000</p>
+        <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
+        <br>
+        <a href="pag2.html">
+            <button> Clique aqui</button>
+        </a>
+    </div>
+    </div>
 </body>
+
 </html>
