Criando Uma pagina do zero
essa aula foi criação de section

--- a/pag1.html
+++ b/pag1.html
@@ -6,110 +6,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f35b5640ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="pag1.css">
-    <link rel="shortcut icon" href="imagens/fashion.png" type="image/x-icon">
-    <title>NK Fashion</title>
+    <link rel="shortcut icon" href="imagens/nike.png" type="image/x-icon">
+    <title>Nike</title>
 </head>
 
 <body>
-    <header>
-        <img src="imagens/nk.png" alt="navegador da pagina" width="10%">
-        <ul>
-            <li>
-                <a href="pag1.html">
-                    <i class="fa-solid fa-house"></i> Home</a>
-            </li>
-            <li>
-                <a href="pag2.html">
-                    <i class="fa-solid fa-shirt"></i> Produtos</a>
-            </li>
-            <li>
-                <a href="">
-                    <i class="fa-solid fa-circle-exclamation"></i>
-                    Sobre</a>
-            </li>
-            <li>
-                <a href="">Fale Conosco <i class="fa-regular fa-comment"></i></a>
-            </li>
-        </ul>
+    <header class="menu">
+       
+        <img src="imagens/nike (1).png" alt="navegador da pagina" class="img-header">
+       
+        <nav class="navegador">
+            <ul>
+                <li>
+                    <a href="pag1.html">
+                        <i class="fa-solid fa-house"></i> Home</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-shirt"></i> Produtos</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-solid fa-circle-exclamation"></i>
+                        Sobre</a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa-regular fa-comment"></i> Fale Conosco</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="main">
-        <hr>
-        <h2> Sobretudo Masculino</h2>
-        <div class="card-descricao">
-            <a href="pag2.html">
-                <img src="imagens/images.jpg" alt="homem com estilo de roupa preta">
-            </a>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
-                doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
-                quisquam
-                repudiandae deleniti.</p>
+    <section class="section-01">
 
+        <div class="card">
+            <img src="imagens/nike-branco1.jpg" alt="tenis nike air force branco">
+            <h3>Tenis Nike Air Force 1 "07 Masculino<br>Casual</h3>
+            <p>R$ 759,99 no PIx<del>R$ 799,99</del><span> 5% off</span></p>
         </div>
 
-        <p>R$ 500</p>
-        <p style="color: rgb(2, 255, 2)"> Frete Gratis </p>
-        <a href="pag2.html">
-            <button> Clique aqui</button>
-        </a>
-        <hr>
-        <h2>Elegancia</h2>
-        <div class="card-descricao">
-            <a href="pag2.html">
-                <img src="imagens/download.jpg"
-                    alt="homem vestido com uma camisa social branca de oculos escuro marrom">
-            </a>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
-                doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
-                quisquam
-                repudiandae deleniti.</p>
-
-        </div>
-        <p>R$ 250</p>
-        <p style="color:  rgb(0, 255, 0)">Frete Gratis</p>
-        <br>
-        <a href="pag2.html">
-            <button> Clique aqui</button>
-        </a>
-        <hr>
-        <h2>Ternos</h2>
-        <div class="card-descricao">
-        <a href="pag2.html">
-            <img src="imagens/terno-GF33355001-f1.jpg" alt="homem vestido com uma camisa social branca de oculos escuro marrom" width="250px">
-        </a>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
-            doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
-            quisquam
-            repudiandae deleniti.</p>
-        </a>
-    </div>
-
-        <p>R$ 1.700</p>
-        <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
-        <br>
-        <a href="pag2.html">
-            <button> Clique aqui</button>
-        </a>
-        <hr>
-        <h2>Roupa De Golfe</h2>
-        <div class="card-descricao">
-            <a href="pag2.html">
-                <img src="imagens/golf.jpg" alt="homem vestido de casaco cinza de calça branca e oculos escuro" width="250px">
-            </a>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.<br> Odio illum, numquam sequi<br>saepe rem
-                doloremque nam eum <br> perferendis quibusdam ab aspernatur ex reprehenderit<br>nobis ipsam enim quos
-                quisquam
-                repudiandae deleniti.</p>
+        <div class="card">
+            <img src="imagens/nike-preto.jpg" alt="tenis nike air force preto">
+            <h3>Tenis Nike Air Force 1 "07 Masculino<br>Casual</h3>
+            <p>R$ 759,99 no PIx<del>R$ 799,99</del><span> 10% off</span></p>
         </div>
 
-        <p>R$ 1.000</p>
-        <p style="color: rgb(0, 255, 0)">Frete Gratis</p>
-        <br>
-        <a href="pag2.html">
-            <button> Clique aqui</button>
-        </a>
-    </div>
-    </div>
+        <div class="card">
+            <img src="imagens/nike-marrom-preto-branco.jpg" alt="tenis nike air force branco">
+            <h3>Tenis Nike Air Force 1 "07 Masculino <br> Casual</h3>
+            <p>R$ 759,99 no PIx <del>R$ 799,99</del><span> 20% off</span></p>
+        </div>
+
+        <div class="card">
+            <img src="imagens/nike-pretoebranco.jpg" alt="tenis nike air force preto">
+            <h3>Tenis Nike Air Force 1 "07 Masculino <br> Casual</h3>
+            <p>R$ 759,99 no PIx <del>R$ 799,99</del><span> 5% off</span></p>
+        </div>
+
+    </section>
+
+    <section class="section-02">
+
+        <div class="card">
+            <img src="imagens/nike-brancoazul.jpg" alt="tenis nike air force branco">
+            <h3>Tenis Nike Air Force 1 "07 Masculino<br>Casual</h3>
+            <p>R$ 759,99 no PIx<del>R$ 799,99</del><span> 15% off</span></p>
+        </div>
+
+        <div class="card">
+            <img src="imagens/nike-vermelho.jpg" alt="tenis nike air force branco">
+            <h3>Tenis Nike Air Force 1 "07 Masculino<br>Casual</h3>
+            <p>R$ 759,99 no PIx<del>R$ 799,99</del><span> 10% off</span></p>
+        </div>
+
+        <div class="card">
+            <img src="imagens/nike-cinza.jpg" alt="tenis nike air force branco">
+            <h3>Tenis Nike Air Force 1 "07 Masculino<br>Casual</h3>
+            <p>R$ 759,99 no PIx<del>R$ 799,99</del><span> 15% off</span></p>
+        </div>
+
+        <div class="card">
+            <img src="imagens/preto-laranja.jpg" alt="tenis nike air force branco">
+            <h3>Tenis Nike Air Force 1 "07 Masculino<br>Casual</h3>
+            <p>R$ 759,99 no PIx<del>R$ 799,99</del><span> 25% off</span></p>
+        </div>
+
+    </section>
 </body>
 
 </html>
