criando uma pagina de imobiliária
criação de uma pagina imobiliária

--- a/Aula.html
+++ b/Aula.html
@@ -4,37 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Aula-Img/planet-earth.png" type="image/x-icon">
     <link rel="stylesheet" href="Aula.css">
-    <title>Aula</title>
+    <link rel="shortcut icon" href="Aula-Img/house.png" type="image/x-icon">
+    <title>Imobiliária R.S</title>
 </head>
 
 <body>
 
-    <header class="cabecalho">
-        <img src="Aula-Img/spaceship.png" alt="um icone lunar" class="img-cabecalho">
-        <h1 class="title-cabecalho">Space</h1>
+    <header>
+        <h1>Imobiliária R.S</h1>
     </header>
 
-    <section class="sec-01">
-        <img src="Aula-Img/planet-earth.png" alt="icone do planeta terra" class="img-sec">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi earum a provident.<br>Quaerat atque modi amet!
-            Officiis dolore voluptas repellendus ipsa est dicta magni ipsam,<br> iure odio. Consequatur, repudiandae.
-            Eos!</p>
+    <section class="section-01">
+        <img src="Aula-Img/img-2.jpg" alt="uma imagem de uma casa moderna">
+
+        <div class="text-01">
+            <h2>Refúgio Noturno Tranquilo</h2>
+
+            <p> A imagem captura a beleza e a serenidade de uma casa luxuosa ao anoitecer. A iluminação quente e suave<br>
+                realça a arquitetura moderna,<br> as plantas exuberantes e a entrada imponente, criando uma atmosfera
+                acolhedora e convidativa. O céu crepuscular complementa a cena, prometendo uma noite de paz e conforto <br>
+                neste refúgio particular.</p>
+        </div>
     </section>
 
-    <section class="sec-02">
-        <img src="Aula-Img/planet-earth.png" alt="icone do planeta terra"  class="img-sec">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi earum a provident.<br>Quaerat atque modi amet!
-            Officiis dolore voluptas repellendus ipsa est dicta magni ipsam,<br> iure odio. Consequatur, repudiandae.
-            Eos!</p>
+    <section class="section-02">
+        <img src="Aula-Img/img-3.jpg" alt="uma imagem de um corredor de uma casa">
+
+        <div class="text-02">
+            <h2>Elegância e Acessibilidade Interior</h2>
+
+            <p>A fotografia apresenta um corredor interno de uma residência moderna, unindo funcionalidade e design. Um
+                elevador com acabamento em madeira clara e porta de vidro reflete a luz do ambiente, enquanto um tapete
+                estampado em tons de azul e branco guia o olhar. Uma planta verde em um vaso branco adiciona um toque de
+                natureza ao espaço minimalista, complementado por detalhes como a iluminação pendente e a decoração de
+                parede em azul turquesa. A escada de madeira com corrimão preto sugere uma transição fluida entre os
+                pavimentos, evidenciando a atenção aos detalhes e a busca por conforto e praticidade.</p>
+        </div>
     </section>
 
-    <section class="sec-03">
+    <section class="section-03">
 
-        <button class="btn-sec03">Saiba Mais</button>
+        <button>Saiba Mais!</button>
 
     </section>
+
 </body>
 
 </html>
