só arrumando o texto
troquei o texto

--- a/Aula.html
+++ b/Aula.html
@@ -19,12 +19,10 @@
         <img src="Aula-Img/img-2.jpg" alt="uma imagem de uma casa moderna">
 
         <div class="text-01">
-            <h2>Refúgio Noturno Tranquilo</h2>
+            <h2>Casa de Luxo com Fachada Iluminada</h2>
 
-            <p> A imagem captura a beleza e a serenidade de uma casa luxuosa ao anoitecer. A iluminação quente e suave<br>
-                realça a arquitetura moderna,<br> as plantas exuberantes e a entrada imponente, criando uma atmosfera
-                acolhedora e convidativa. O céu crepuscular complementa a cena, prometendo uma noite de paz e conforto <br>
-                neste refúgio particular.</p>
+           <p>Encante-se com esta magnífica casa de alto padrão que combina elegância, conforto e sofisticação. A fachada imponente é valorizada por uma iluminação arquitetônica que destaca o paisagismo exuberante e o design contemporâneo. O amplo pátio de entrada com piso em pedra natural dá boas-vindas com charme e funcionalidade. Ideal para quem busca viver com estilo em um ambiente exclusivo e acolhedor. Perfeita para famílias que valorizam privacidade, segurança e um toque de luxo no dia a dia.</p> 
+
         </div>
     </section>
 
@@ -32,14 +30,9 @@
         <img src="Aula-Img/img-3.jpg" alt="uma imagem de um corredor de uma casa">
 
         <div class="text-02">
-            <h2>Elegância e Acessibilidade Interior</h2>
+            <h2>Hall Moderno com Elevador Privativo</h2>
 
-            <p>A fotografia apresenta um corredor interno de uma residência moderna, unindo funcionalidade e design. Um
-                elevador com acabamento em madeira clara e porta de vidro reflete a luz do ambiente, enquanto um tapete
-                estampado em tons de azul e branco guia o olhar. Uma planta verde em um vaso branco adiciona um toque de
-                natureza ao espaço minimalista, complementado por detalhes como a iluminação pendente e a decoração de
-                parede em azul turquesa. A escada de madeira com corrimão preto sugere uma transição fluida entre os
-                pavimentos, evidenciando a atenção aos detalhes e a busca por conforto e praticidade.</p>
+            <p>Este elegante hall de entrada combina praticidade e estilo com um elevador privativo, ideal para oferecer acessibilidade e conforto em todos os níveis da residência. O ambiente é marcado por uma escada com acabamento em madeira e detalhes em ferro, além de elementos decorativos que trazem charme e personalidade ao espaço. A iluminação suave e o design limpo reforçam a sofisticação de um lar pensado nos mínimos detalhes.</p>
         </div>
     </section>
 
