atualizção da pagina
detalhes da pagina

--- a/Aula.html
+++ b/Aula.html
@@ -12,7 +12,22 @@
 <body>
 
     <header>
-        <h1>Imobiliária R.S</h1>
+
+        <div class="logo">
+            <img src="Aula-Img/Logo.png" alt="logo imobiliária r.s">
+        </div>
+
+        <div class="navegador">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Contato</a></li>
+                    <li><a href="">Sobre-Nós</a></li>
+                </ul>
+            </nav>
+        </div>
+
+
     </header>
 
     <section class="section-01">
@@ -21,7 +36,11 @@
         <div class="text-01">
             <h2>Casa de Luxo com Fachada Iluminada</h2>
 
-           <p>Encante-se com esta magnífica casa de alto padrão que combina elegância, conforto e sofisticação. A fachada imponente é valorizada por uma iluminação arquitetônica que destaca o paisagismo exuberante e o design contemporâneo. O amplo pátio de entrada com piso em pedra natural dá boas-vindas com charme e funcionalidade. Ideal para quem busca viver com estilo em um ambiente exclusivo e acolhedor. Perfeita para famílias que valorizam privacidade, segurança e um toque de luxo no dia a dia.</p> 
+            <p>Encante-se com esta magnífica casa de alto padrão que combina elegância, conforto e sofisticação. A
+                fachada imponente é valorizada por uma iluminação arquitetônica que destaca o paisagismo exuberante e o
+                design contemporâneo. O amplo pátio de entrada com piso em pedra natural dá boas-vindas com charme e
+                funcionalidade. Ideal para quem busca viver com estilo em um ambiente exclusivo e acolhedor. Perfeita
+                para famílias que valorizam privacidade, segurança e um toque de luxo no dia a dia.</p>
 
         </div>
     </section>
@@ -32,15 +51,56 @@
         <div class="text-02">
             <h2>Hall Moderno com Elevador Privativo</h2>
 
-            <p>Este elegante hall de entrada combina praticidade e estilo com um elevador privativo, ideal para oferecer acessibilidade e conforto em todos os níveis da residência. O ambiente é marcado por uma escada com acabamento em madeira e detalhes em ferro, além de elementos decorativos que trazem charme e personalidade ao espaço. A iluminação suave e o design limpo reforçam a sofisticação de um lar pensado nos mínimos detalhes.</p>
+            <p>Este elegante hall de entrada combina praticidade e estilo com um elevador privativo, ideal para oferecer
+                acessibilidade e conforto em todos os níveis da residência. O ambiente é marcado por uma escada com
+                acabamento em madeira e detalhes em ferro, além de elementos decorativos que trazem charme e
+                personalidade ao espaço. A iluminação suave e o design limpo reforçam a sofisticação de um lar pensado
+                nos mínimos detalhes.</p>
         </div>
     </section>
 
     <section class="section-03">
 
-        <button>Saiba Mais!</button>
+        <a href="#">
+            <button>Saiba Mais !</button>
+        </a>
 
     </section>
+
+    <section class="section-04">
+        <img src="Aula-Img/img-04.jpg" alt="uma imagem de um corredor de uma casa">
+
+        <div class="text-04">
+            <h2>Elegância Clássica no Hall de Entrada – Imóvel de Alto Padrão</h2>
+
+            <p>Bem-vindo ao charme atemporal desta residência sofisticada! Ao adentrar este imóvel de alto padrão, você
+                é recebido por um hall de entrada imponente com escada curva em carpete claro, corrimão de madeira e
+                detalhes em ferro forjado. O piso de madeira nobre complementa perfeitamente a iluminação embutida e a
+                decoração de bom gosto, criando uma atmosfera acolhedora e refinada. Ideal para quem busca conforto,
+                estilo e exclusividade em cada detalhe do seu novo lar.</p>
+        </div>
+    </section>
+
+    <footer class="rodape">
+
+        <div class="img-rodape">
+            <img src="Aula-Img/Logo.png" alt="logo imobiliária r.s">
+        </div>
+
+        <div class="icone">
+            <a href="">
+                <img src="Aula-Img/whatsapp.png" alt="whatsapp">Whatsapp
+            </a>
+
+            <a href="">
+                <img src="Aula-Img/instagram.png" alt="instagram">Instragram
+            </a>
+
+            <a href="">
+                <img src="Aula-Img/gmail.png" alt="gmail">Imobiliariars@gmail.com
+            </a>
+        </div>
+    </footer>
 
 </body>
 
