--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Aula.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Aula-Img/house.png" type="image/x-icon">
     <title>Imobiliária R.S</title>
 </head>
