--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
 <body>
 
+       <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
     <header>
 
         <div class="logo">
@@ -100,6 +111,7 @@
                 <img src="Aula-Img/gmail.png" alt="gmail">Imobiliariars@gmail.com
             </a>
         </div>
+
     </footer>
 
 </body>
