--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-       <div vw class="enabled">
+    <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
             <div class="vw-plugin-top-wrapper"></div>
@@ -91,6 +91,47 @@
                 estilo e exclusividade em cada detalhe do seu novo lar.</p>
         </div>
     </section>
+
+    <section class="section-05">
+
+        <iframe width="550" height="400" style="pointer-events: none;"
+            src="https://www.youtube.com/embed/Zzzsbe7vXF4?si=XetWLiFzWSij4SE4&autoplay=1&mute=1&controls=0&loop=1&playlist=Zzzsbe7vXF4&end=60"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14631.682391560405!2d-46.46515534458004!3d-23.53535809999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce66bc8c86908b%3A0x36962a2d69f3db06!2sObra%20Social%20Dom%20Bosco!5e0!3m2!1spt-BR!2sbr!4v1756246475899!5m2!1spt-BR!2sbr"
+            width="500" height="400" allow="autoplay" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </section>
+
+    <section class="card">
+
+        <div class="cards">
+            <img src="Aula-Img/casa1.jpg" alt="">
+            <p>📍Rua das Acácias, 123 - Jardim Primavera, São Paulo -   SP, 04567-890</p>
+            <p>📞(11) 98765-4321</p>
+            <p>📧 contato@exemplo1.com</p>
+        </div>
+
+        <div class="cards">
+            <img src="Aula-Img/casa2.jpg" alt="">
+            <p>📍Avenida Central, 456 - Centro, Belo Horizonte - MG, 30123-456</p>
+            <p>📞(31) 99876-5432</p>
+            <p>📧 suporte@empresaabc.com</p>
+        </div>
+
+        <div class="cards">
+            <img src="Aula-Img/condominio.jpg" alt="">
+            <p>📍Travessa do Sol, 789 - Praia Azul, Salvador - BA, 40100-123</p>
+            <p>📞 (71) 91234-5678</p>
+            <p>📧 atendimento@negocioxyz.com</p>
+        </div>
+
+    </section>
+
 
     <footer class="rodape">
 
