--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/f35b5640ea.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="Aula-Img/house.png" type="image/x-icon">
+    <link rel="shortcut icon" href="icon/house.png" type="image/x-icon">
     <title>Imobiliária R.S</title>
 </head>
 
 <body>
-
+    
+    <!-- script Da libras -->
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
         <div vw-plugin-wrapper>
@@ -21,7 +23,9 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
+    <!-- Fim Do Script Da Libras -->
 
+    <!-- Meu Cabeçalho -->
     <header>
 
         <div class="logo">
@@ -38,11 +42,12 @@
             </nav>
         </div>
 
-
     </header>
+    <!-- Fim Do Cabeçalho -->
 
+    <!-- Primeira Seção -->
     <section class="section-01">
-        <img src="Aula-Img/img-2.jpg" alt="uma imagem de uma casa moderna">
+        <img id="kitchen" src="Aula-Img/img-2.jpg" alt="uma imagem de uma casa moderna">
 
         <div class="text-01">
             <h2>Casa de Luxo com Fachada Iluminada</h2>
@@ -55,7 +60,9 @@
 
         </div>
     </section>
+    <!-- Fim Da Primeira Seção -->
 
+    <!-- Segunda Seção -->
     <section class="section-02">
         <img src="Aula-Img/img-3.jpg" alt="uma imagem de um corredor de uma casa">
 
@@ -69,7 +76,9 @@
                 nos mínimos detalhes.</p>
         </div>
     </section>
+    <!-- Fim Da Segunda Seção -->
 
+    <!-- Terceira Seção -->
     <section class="section-03">
 
         <a href="#">
@@ -77,7 +86,9 @@
         </a>
 
     </section>
+    <!-- Fim Da Terceira Seção -->
 
+    <!-- Quarta Seção -->
     <section class="section-04">
         <img src="Aula-Img/img-04.jpg" alt="uma imagem de um corredor de uma casa">
 
@@ -91,7 +102,9 @@
                 estilo e exclusividade em cada detalhe do seu novo lar.</p>
         </div>
     </section>
+    <!-- Fim Da Quarta Seção -->
 
+    <!-- Quinta Seção -->
     <section class="section-05">
 
         <iframe width="550" height="400" style="pointer-events: none;"
@@ -106,33 +119,52 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     </section>
+    <!-- Fim Da Quinta Seção -->
 
+    <!-- Seção Card -->
     <section class="card">
 
         <div class="cards">
-            <img src="Aula-Img/casa1.jpg" alt="">
-            <p>📍Rua das Acácias, 123 - Jardim Primavera, São Paulo -   SP, 04567-890</p>
+            <img class="principal-card" src="Aula-Img/casa1.jpg" alt="casa 1">
+            <p>📍Rua das Acácias, 123 - Jardim Primavera, São Paulo - SP, 04567-890</p>
             <p>📞(11) 98765-4321</p>
             <p>📧 contato@exemplo1.com</p>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+
         </div>
 
         <div class="cards">
-            <img src="Aula-Img/casa2.jpg" alt="">
+            <img class="principal-card" src="Aula-Img/casa2.jpg" alt="casa 2">
             <p>📍Avenida Central, 456 - Centro, Belo Horizonte - MG, 30123-456</p>
             <p>📞(31) 99876-5432</p>
             <p>📧 suporte@empresaabc.com</p>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
         </div>
 
         <div class="cards">
-            <img src="Aula-Img/condominio.jpg" alt="">
+            <img class="principal-card" src="Aula-Img/condominio.jpg" alt="casa 3">
             <p>📍Travessa do Sol, 789 - Praia Azul, Salvador - BA, 40100-123</p>
             <p>📞 (71) 91234-5678</p>
             <p>📧 atendimento@negocioxyz.com</p>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-solid fa-star" style="color: #FFD43B;"></i>
+            <i class="fa-regular fa-star" style="color: #FFD43B;"></i>
         </div>
 
     </section>
+    <!-- Fim Da Seção Card -->
 
-
+    <!-- Rodapé -->
     <footer class="rodape">
 
         <div class="img-rodape">
@@ -141,19 +173,20 @@
 
         <div class="icone">
             <a href="">
-                <img src="Aula-Img/whatsapp.png" alt="whatsapp">Whatsapp
+                <img src="icon/whatsapp.png" alt="whatsapp">Whatsapp
             </a>
 
             <a href="">
-                <img src="Aula-Img/instagram.png" alt="instagram">Instragram
+                <img src="icon/instagram.png" alt="instagram">Instragram
             </a>
 
             <a href="">
-                <img src="Aula-Img/gmail.png" alt="gmail">Imobiliariars@gmail.com
+                <img src="icon/gmail.png" alt="gmail">Imobiliariars@gmail.com
             </a>
         </div>
 
     </footer>
+    <!-- Fim Do Rodapé -->
 
 </body>
 
