--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <li><a href="">Home</a></li>
                     <li><a href="">Contato</a></li>
                     <li><a href="">Sobre-Nós</a></li>
+                    <li><a href="">Cadastre-se</a></li>
                 </ul>
             </nav>
         </div>
@@ -108,7 +109,7 @@
     <section class="section-05">
 
         <iframe width="550" height="400" style="pointer-events: none;"
-            src="https://www.youtube.com/embed/Zzzsbe7vXF4?si=XetWLiFzWSij4SE4&autoplay=1&mute=1&controls=0&loop=1&playlist=Zzzsbe7vXF4&end=60"
+            src="https://www.youtube.com/embed/Zzzsbe7vXF4?si=XetWLiFzWSij4SE4&autoplay=1&mute=1&controls=0&loop=1&playlist=Zzzsbe7vXF4&end=120"
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
