--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li><a href="">Home</a></li>
                     <li><a href="">Contato</a></li>
                     <li><a href="">Sobre-Nós</a></li>
-                    <li><a href="">Cadastre-se</a></li>
+                    <li><a href="indexlogin.html">Cadastre-se</a></li>
                 </ul>
             </nav>
         </div>
