--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="navegador">
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Contato</a></li>
-                    <li><a href="">Sobre-Nós</a></li>
+                    <li><a href="indexsobrenos.html">Sobre-Nós</a></li>
                     <li><a href="indexlogin.html">Cadastre-se</a></li>
                 </ul>
             </nav>
