adicionando o menu hamburguer

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f35b5640ea.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="responsividade.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icon/house.png" type="image/x-icon">
     <title>Imobiliária R.S</title>
 </head>
 
 <body>
-    
+
     <!-- script Da libras -->
     <div vw class="enabled">
         <div vw-access-button class="active"></div>
@@ -33,7 +34,7 @@
         </div>
 
         <div class="navegador">
-            <nav>
+            <nav class="menu-desktop">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="">Contato</a></li>
@@ -43,8 +44,25 @@
             </nav>
         </div>
 
+        <!-- botão do menu hamburguer -->
+        <div class="menu-ham" id="menuHamburguer">
+            <i class="fa-solid fa-bars"></i>
+        </div>
+
+
+        <!-- menu mobile -->
+        <nav class="nav-menu" id="navMenu">
+            <ul class="ul-list">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="">Contato</a></li>
+                <li><a href="indexsobrenos.html">Sobre-Nós</a></li>
+                <li><a href="indexlogin.html">Cadastre-se</a></li>
+            </ul>
+        </nav>
+
     </header>
     <!-- Fim Do Cabeçalho -->
+
 
     <!-- Primeira Seção -->
     <section class="section-01">
