--- a/indexlogin.html
+++ b/indexlogin.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icon/house.png" type="image/x-icon">
+    <link rel="stylesheet" href="responsividade.css">
     <link rel="stylesheet" href="stylelogin.css">
     <title>Cadastre-se</title>
 </head>
